--- a/src/main/webapp/script/template_inbox.xhtml
+++ b/src/main/webapp/script/template_inbox.xhtml
@@ -387,7 +387,7 @@
 
                 <pe:layoutPane position="west" size="350" resizable="true" >         
                      <f:facet name="header">  
-                     <ui:insert name="menutitle">Menú</ui:insert>
+                     <ui:insert name="menutitle"> <p:outputLabel value="Menú"/></ui:insert>
                 </f:facet>  
                     <ui:insert name="west"/>               
                 </pe:layoutPane> 
