--- a/src/main/webapp/script/agenda.xhtml
+++ b/src/main/webapp/script/agenda.xhtml
@@ -9,7 +9,11 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{applicationBean.helpdeskTitle} - Agenda"></h:outputText>
+            <p:outputLabel value="#{bundle.agendaTitle}"/>
+        </ui:define>
+        
+         <ui:define name="menutitle">
+            <p:outputLabel value="#{bundle.agendaMenuTitle}"/>
         </ui:define>
 
         <ui:define name="head" id="head">
@@ -24,9 +28,6 @@
 
         <ui:define name="west" id="west">
             <h:form id="filterSchedule">
-
-
-
                 <p:panelGrid columns="1" styleClass="filtersGrid">
                     <p:row>
                         <p:column>
@@ -192,10 +193,7 @@
 
         <ui:define name="body" id="body">
 
-            <pe:layoutPane position="center" id="listaInbox">                   
                 <div style="margin-top: 12px !important;">
-
-                    <h1>Agenda Glogal</h1>
 
                     <h:panelGroup id="panel">
 
@@ -215,7 +213,6 @@
 
                     </h:panelGroup>
                 </div>
-            </pe:layoutPane>
 
         </ui:define>
 
