--- a/src/main/webapp/script/appSetting/List.xhtml
+++ b/src/main/webapp/script/appSetting/List.xhtml
@@ -9,7 +9,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListAppSettingTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.ListAppSettingTitle}"/>
         </ui:define>
         <ui:define name="body">
             <h1>Configuration Properties</h1>
