--- a/src/main/webapp/script/appSetting/config.xhtml
+++ b/src/main/webapp/script/appSetting/config.xhtml
@@ -10,7 +10,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{applicationBean.helpdeskTitle} - #{bundle.ListAppSettingTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.ListAppSettingTitle}"/>
         </ui:define>
 
         <ui:define name="westHeader">
