--- a/src/main/webapp/script/area/Create.xhtml
+++ b/src/main/webapp/script/area/Create.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateAreaTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.CreateAreaTitle}"/>
         </ui:define>
 
         <ui:define name="west">
