--- a/src/main/webapp/script/area/Edit.xhtml
+++ b/src/main/webapp/script/area/Edit.xhtml
@@ -9,7 +9,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.EditAreaTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.EditAreaTitle}"/>
         </ui:define>
 
         <ui:define name="west">
