--- a/src/main/webapp/script/area/List.xhtml
+++ b/src/main/webapp/script/area/List.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListAreaTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.ListAreaTitle}"/>
         </ui:define>
 
         <ui:define name="menutitle">Áreas</ui:define>
