--- a/src/main/webapp/script/area/View.xhtml
+++ b/src/main/webapp/script/area/View.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ViewAreaTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.ViewAreaTitle}"/>
         </ui:define>
 
         <ui:define name="west">
@@ -39,7 +39,7 @@
                                      rowsPerPageTemplate="5,10,15,30,50">
 
                             <f:facet name="header">  
-                                <h:outputText value="Grupos Asociados"></h:outputText>                           
+                                <h:outputText value="Grupos Asociados"/>                           
                             </f:facet>   
 
                             <p:column sortBy="#{item.idGrupo}" headerText="#{bundle.ListGrupoTitle_idGrupo}">
