--- a/src/main/webapp/script/audit_log/Alert.xhtml
+++ b/src/main/webapp/script/audit_log/Alert.xhtml
@@ -8,14 +8,12 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="Alertas"></h:outputText>
+            <p:outputLabel value="Alertas"/>
         </ui:define>
         <ui:define name="west">
-            <p:accordionPanel multiple="true" cache="true" id="accionesaccordion1">
-                <p:tab title="Alertas" id="accionestab1">
+          
                     <h:outputLabel escape="false" value="#{bundle.ayudaAlertas}"/>
-                </p:tab>
-            </p:accordionPanel>
+              
         </ui:define>
         <ui:define name="body">
 
@@ -58,7 +56,7 @@
                                      emptyMessage="#{bundle.ListAuditLogEmpty}">
 
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListAuditLogTitle} (#{auditLogController.pagination.pageFirstItem + 1} - #{auditLogController.pagination.pageLastItem + 1} de #{auditLogController.pagination.itemsCount})"></h:outputText>
+                                <h:outputText value="#{bundle.ListAuditLogTitle} (#{auditLogController.pagination.pageFirstItem + 1} - #{auditLogController.pagination.pageLastItem + 1} de #{auditLogController.pagination.itemsCount})"/>
                             </f:facet>
 
                         <p:column >
