--- a/src/main/webapp/script/blackList/List.xhtml
+++ b/src/main/webapp/script/blackList/List.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="Black List"></h:outputText>
+            <p:outputLabel value="Email Black List"/>
         </ui:define>
 
         <ui:define name="west">
@@ -28,7 +28,7 @@
                                  resizableColumns="true" >
 
                         <f:facet name="header">  
-                            <h:outputText value="Lista negra de direcciones email (#{blackListController.pagination.pageFirstItem + 1} - #{blackListController.pagination.pageLastItem + 1} de #{blackListController.pagination.itemsCount})"></h:outputText>                           
+                            <h:outputText value="Lista negra de direcciones email (#{blackListController.pagination.pageFirstItem + 1} - #{blackListController.pagination.pageLastItem + 1} de #{blackListController.pagination.itemsCount})"/>                           
                         </f:facet>   
 
                         <p:column headerText="Correo">
