--- a/src/main/webapp/script/canal/Create.xhtml
+++ b/src/main/webapp/script/canal/Create.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateCanalTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.CreateCanalTitle}"/>
         </ui:define>
         <ui:define name="body">
 
