--- a/src/main/webapp/script/canal/List.xhtml
+++ b/src/main/webapp/script/canal/List.xhtml
@@ -8,15 +8,16 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListCanalTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.ListCanalTitle}"/>
+        </ui:define>
+        <ui:define name="menutitle">
+            <p:outputLabel value="#{bundle.ListCanalMenuTitle}"/>
         </ui:define>
 
         <ui:define name="west">
-            <p:accordionPanel multiple="true" cache="true" >
-                <p:tab title="Canales" >
-                    <h:outputLabel escape="false" value="#{bundle.ayudaCanales}"/>
-                </p:tab>
-            </p:accordionPanel>
+
+            <h:outputLabel escape="false" value="#{bundle.ayudaCanales}"/>
+
         </ui:define>
 
         <ui:define name="body">
@@ -29,7 +30,7 @@
                                  resizableColumns="true" >
 
                         <f:facet name="header">  
-                            <h:outputText value="#{bundle.ListCanalTitle} (#{canalController.pagination.pageFirstItem + 1} - #{canalController.pagination.pageLastItem + 1} de #{canalController.pagination.itemsCount})"></h:outputText>                           
+                            <h:outputText value="#{bundle.ListCanalTitle} (#{canalController.pagination.pageFirstItem + 1} - #{canalController.pagination.pageLastItem + 1} de #{canalController.pagination.itemsCount})"/>                           
                         </f:facet>
 
                         <p:column headerText="Estado" width="120">
@@ -273,7 +274,7 @@
                             </p:row>
                         </p:panelGrid>
                     </h:panelGroup>
-                    
+
                     <!-- panel de configuracion avanzado-->
                     <h:panelGroup rendered="#{canalController.tmpEmailFirstStepReady and filtroAcceso.administradorDelSistema}">
                         <p:separator/>
