--- a/src/main/webapp/script/prioridad/List.xhtml
+++ b/src/main/webapp/script/prioridad/List.xhtml
@@ -9,52 +9,18 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListPrioridadTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.ListPrioridadTitle}"/>
         </ui:define>
         <ui:define name="west">
 
-            <p:accordionPanel multiple="true" cache="true" >
-                <p:tab title="#{bundle.ListPrioridadTitle}" >
-
-                    <p>Use esta configuracion para definir Niveles de Prioridad de casos, como por Ejemplo:</p>
-                    <h3>Nivel de gravedad 1 (Prioridad Máxima)</h3>
-
-                    <ul>
-                        <li>El cliente Experimenta una pérdida completa del servicio/producto. </li>
-                        <li>El trabajo no puede continuar debido a daños serios al producto/Servicio.</li>
-                        <li>La continuidad de operación del Producto/Servicio es una misión crítica para el cliente y la situación es una emergencia.</li>
-                    </ul>
-
-                    <h3>Nivel de gravedad 2 (Prioridad Alta)</h3>
-
-                    <ul>
-                        <li>Experimenta una pérdida grave del Producto/Servicio.</li>
-                        <li>La operación del Producto/Servicio puede continuar pero de manera restringida.</li>            
-                    </ul>
-
-                    <p> </p>
-
-                    <h3>Nivel de gravedad 3 (Prioridad Media)</h3>
-                    <ul>
-                        <li>Experimenta una pérdida menor del Producto/Servicio.</li>
-                        <li>El impacto es un inconveniente menor.</li>            
-                    </ul>
-
-                    <h3>Nivel de gravedad 4 (No hay impacto, Prioridad Baja)</h3>
-                    <ul>
-                        <li>El cliente solicita información sin experimentar pérdida o problemas del Producto/Servicio.</li>
-                        <li>La situación no impide el funcionamiento del Producto/Servicio entregado.</li>            
-                    </ul>
-
-                </p:tab>
-            </p:accordionPanel>
+            <ui:include src="help.xhtml"/>
 
 
         </ui:define>
         <ui:define name="body">
             <h:form id="form">
 
-                <go:filterView controllerMBean="#{prioridadController}" filterHelper="#{prioridadController.filterHelper}" update=":mainform:messages :form"
+                <go:filterView controllerMBean="#{prioridadController}" filterHelper="#{prioridadController.filterHelper}" 
                                vistaControllerBackOutcome="/script/prioridad/List"/>
 
                 <h:panelGroup>
