--- a/src/main/webapp/script/sub_estado_caso/List.xhtml
+++ b/src/main/webapp/script/sub_estado_caso/List.xhtml
@@ -9,7 +9,7 @@
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListSubEstadoCasoTitle}"></h:outputText>
+            <p:outputLabel value="#{bundle.ListSubEstadoCasoTitle}"/>
         </ui:define>
         <ui:define name="west">
             <p:accordionPanel multiple="true" cache="true" id="accionesaccordion1">
@@ -21,7 +21,7 @@
         <ui:define name="body">
             <h:form id="form">
 
-                <go:filterView controllerMBean="#{subEstadoCasoController}" filterHelper="#{subEstadoCasoController.filterHelper}" update=":mainform:messages :form"
+                <go:filterView controllerMBean="#{subEstadoCasoController}" filterHelper="#{subEstadoCasoController.filterHelper}" 
                                vistaControllerBackOutcome="/script/sub_estado_caso/List"/>
 
                 <h:panelGroup >
