--- a/src/main/webapp/resources/go/filterView.xhtml
+++ b/src/main/webapp/resources/go/filterView.xhtml
@@ -20,7 +20,7 @@
         </composite:interface>
 
         <composite:implementation>
-                <p:panel id="panelFilter"  style="border: 1;">
+                <p:panel id="panelFilter"  style="border: none;">
 
                         <h:panelGrid columns="4" rendered="#{cc.attrs.showApplyAction}" style="padding: 0">
                             <i class="#{cc.attrs.titleIconClass}"></i>
