--- a/src/main/webapp/resources/go/vistasList.xhtml
+++ b/src/main/webapp/resources/go/vistasList.xhtml
@@ -18,7 +18,7 @@
 
         <h:form id="vistasForm">
 
-            <p:dataList paginator="true" paginatorAlwaysVisible="false" 
+            <p:dataList paginator="true" paginatorAlwaysVisible="false" paginatorPosition="bottom"
                         type="ordered" rows="10" style="width: 100%;border: none;"
                         value="#{cc.attrs.controllerMBean.getAllVistasItems(cc.attrs.user)}" var="vista1" 
                         emptyMessage="#{bundle.emptyViews}">
