--- a/src/main/webapp/script/caso/Edit.xhtml
+++ b/src/main/webapp/script/caso/Edit.xhtml
@@ -197,14 +197,14 @@
             </h:form>
 
 
-            <p:tabView id="inputPanel" dynamic="true" scrollable="true" cache="false" style="width: 99% !important; height: 99% !important;" activeIndex="#{casoController.activeIndexCasoSections}">
+            <p:tabView id="inputPanel" dynamic="true" scrollable="true" cache="false" style="width: 99% !important; height: 87% !important;" activeIndex="#{casoController.activeIndexCasoSections}">
                 <p:ajax event="tabChange" listener="#{casoController.onChangeActiveIndexCasoSections}" />
                 <p:ajax event="tabClose" listener="#{casoScheduleController.onTabClose}" />
 
 
                 <p:tab id="tab-actividades" title="Actividades">
 
-                    <p:scrollPanel id="scrollpaneActividades" mode="native" style="border: 0; height: 500px;">
+                    <p:scrollPanel id="scrollpaneActividades" mode="native" style="border: 0;">
                         <p:panel id="resumenNotas" style="border: 0;">
                             <p:effect type="highlight" event="load" /> 
                             <h:panelGrid columns="9" >
@@ -270,7 +270,7 @@
                                      showNavigation="true" 
                                      editable="false" eventStyle="dot"
                                      showButtonNew="false" minHeight="200" widgetVar="timelineWdgt">  
-
+                            
                             <h:panelGrid columns="1">  
                                 <i class="fa fa-calendar"></i>
                                 <h:outputText value="#{event.title}"/>  
@@ -285,11 +285,6 @@
 
                 <p:tab id="tabArchivos" title="Adjuntos (#{casoController.cantidadAttachment()})">
                     <h:form id="formlistaadjuntos">
-
-
-                        <div class="formSeparator">
-                            <h2>Adjuntos (#{casoController.cantidadAttachment()})</h2>
-                        </div>
 
                         <h:panelGroup id="listaadjuntos" layout="block">
 
